@startuml Plan State Machine
title Plan State Machine
hide empty description

[*] --> CREATED
CREATED: Criado
CREATED --> PROVIDER_PLAN_CREATED
PROVIDER_PLAN_CREATED: Criado no provedor
PROVIDER_PLAN_CREATED --> ACTIVE
ACTIVE: Disponível
ACTIVE --> UNAVALIABLE
UNAVALIABLE: Indisponível
ACTIVE --> [*]
UNAVALIABLE --> [*]
@enduml
